# libscrabble

./: .travis.yml  CMakeLists.txt  README.md  dictionary.txt
.github/workflows/: cmake-multi-platform.yml
include/: grid.hpp  gui.hpp  gui_text.hpp  placement.hpp  solution.hpp  trie.hpp
src/: grid.cpp  gui.cpp  gui_text.cpp  main.cpp  solution.cpp  test.cpp  trie.cpp
